; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_rpc.c_rpc_query_delete_nobuf.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_rpc.c_rpc_query_delete_nobuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_query = type { i64, i32 (%struct.rpc_query*)* }

@total_working_qid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rpc_query*)* @rpc_query_delete_nobuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rpc_query_delete_nobuf(%struct.rpc_query* %0) #0 {
  %2 = alloca %struct.rpc_query*, align 8
  store %struct.rpc_query* %0, %struct.rpc_query** %2, align 8
  %3 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %4 = call i32 @delete_query_from_queue(%struct.rpc_query* %3)
  %5 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %6 = getelementptr inbounds %struct.rpc_query, %struct.rpc_query* %5, i32 0, i32 1
  %7 = load i32 (%struct.rpc_query*)*, i32 (%struct.rpc_query*)** %6, align 8
  %8 = icmp ne i32 (%struct.rpc_query*)* %7, null
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %11 = getelementptr inbounds %struct.rpc_query, %struct.rpc_query* %10, i32 0, i32 1
  %12 = load i32 (%struct.rpc_query*)*, i32 (%struct.rpc_query*)** %11, align 8
  %13 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %14 = call i32 %12(%struct.rpc_query* %13)
  br label %15

15:                                               ; preds = %9, %1
  %16 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %17 = getelementptr inbounds %struct.rpc_query, %struct.rpc_query* %16, i32 0, i32 0
  store i64 0, i64* %17, align 8
  %18 = load i32, i32* @total_working_qid, align 4
  %19 = add nsw i32 %18, -1
  store i32 %19, i32* @total_working_qid, align 4
  ret void
}

declare dso_local i32 @delete_query_from_queue(%struct.rpc_query*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
